# talos

./: .coveragerc  .gitignore  .pep8speaks.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test-ci.py  test-local.sh  test.file  test_local.sh  test_script.py  ~
.github/: PULL_REQUEST_TEMPLATE.md
docs/: Analyze.md  Asking_Help.md  AutoModel.md  AutoParams.md  AutoPredict.md  AutoScan.md  Backends.md  Custom_Reducers.md  Database.md  Deploy.md  Distribute.md  Energy_Draw.md  Evaluate.md  Examples_AutoML.md  Examples_AutoML_Code.md  Examples_Generator.md  Examples_Generator_Code.md  Examples_Multiple_Inputs.md  Examples_Multiple_Inputs_Code.md  Examples_Multiple_Outputs.md  Examples_Multiple_Outputs_Code.md  Examples_PyTorch.md  Examples_PyTorch_Code.md  Examples_Typical.md  Examples_Typical_Code.md  Gamify.md  Generator.md  Hidden_Layers.md  Install_Options.md  Learning_Rate_Normalizer.md  Local_Strategy.md  MANUAL.rst  Metrics.md  Monitoring.md  Optimization_Strategies.md  Overview.md  Parallelism.md  Predict.md  Probabilistic_Reduction.md  README.md  (+10 more)
examples/: A Very Short Introduction to Hyperparameter Optimization of Keras Models with Talos.ipynb  Functional Model Hyperparameter Optimization.ipynb  Hyperparameter Optimization on Keras with Breast Cancer Data.ipynb  Hyperparameter Optimization with Keras for the Iris Prediction.ipynb  Recover Best Models from Experiment Log.ipynb  iris.py  models.py  version-check.py
hyperio/: main.py  (+3 more)
(+324 files in other folders)
